tests/build/cases/widget_new/missing_semi_in_when2.stderr
error: expected `,`
  --> cases/widget_new/missing_semi_in_when2.rs:10:13
   |
10 |             cursor = CursorIcon::Hand;
   |             ^^^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_semi_in_when2.rs:9:13
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         margin = 0;
7  | |         cursor = CursorIcon::Default;
8  | |         when *#is_pressed {
9  | |             margin =
   | |             ^^^^^^
10 | |             cursor = CursorIcon::Hand;
11 | |         }
12 | |     };
   | |_____- an argument is missing
   |
note: method defined here
  --> $WORKSPACE/zero-ui/src/properties/layout.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/zero-ui/src/widgets.rs
   |
   | margin(/* margin */)
   |
